<resources>
    <string name="app_name">CountAndCompar</string>
    <string name="interval">Выбери интервал</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="multiply">*</string>
    <string name="divide">/</string>
    <string name="more"><![CDATA[>]]></string>
    <string name="equals">=</string>
    <string name="smaller"><![CDATA[<]]></string>
    <string name="randomPlus">+</string>
    <string name="nunRunPl">=</string>
</resources>